添加状态观察

--- a/Sentry/TaiSentry/TaiSentry.csproj
+++ b/Sentry/TaiSentry/TaiSentry.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Notification\" />
+    <Folder Include="Server\" />
+    <Folder Include="CommandHandler\" />
+  </ItemGroup>
+
 </Project>
