完善状态观察

--- a/Sentry/TaiSentry/TaiSentry.csproj
+++ b/Sentry/TaiSentry/TaiSentry.csproj
@@ -12,4 +12,8 @@
     <Folder Include="CommandHandler\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Win32.SystemEvents" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
